--- a/plugins/Emaj/themes/ppa/tablesorter.css
+++ b/plugins/Emaj/themes/ppa/tablesorter.css
@@ -20,7 +20,7 @@
 	background-image: url(desc.gif);
 }
 .tablesorter-default thead tr .tablesorter-headerDesc, table.tablesorter thead tr .tablesorter-headerAsc {
-	background-color: #ffffff;
+	background-color: #CECF9C;
 }
 .tablesorter-default thead .sorter-false {
 	background-image: none;
@@ -52,7 +52,7 @@
 
 /* filter widget */
 .tablesorter-default .tablesorter-filter-row td {
-	background: #ffffff;
+	background: #D0D0B8;
 	border-bottom: #ccc 1px solid;
 	line-height: normal;
 	text-align: center; /* center the input */
@@ -66,10 +66,11 @@
 .tablesorter-default input.tablesorter-filter {
 	width: 5em;
 	font-size: 0.8em;
-    border: 1px solid #887F5C;
+    border: 1px solid #787870;
 }
 .tablesorter-default select.tablesorter-filter {
 	font-size: 0.8em;
+    border: 1px solid #787870;
 }
 .tablesorter-default input.disabled {
 	display: none;
