--- a/themes/default/global.css
+++ b/themes/default/global.css
@@ -1,99 +1,213 @@
 @import url(../global.css);
 /**
- * Default style sheet
+ * E-maj style sheet
  */
-
-/** ELEMENTS */
 body {
-	background-color: #FFFFFF;
+	background-color: #ffffff;
 	margin:	4px;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	padding: 0px;
-	font-size: smaller; /*0.8em;*/
+	padding: 0;
+	font-family: "Open Sans", arial, tahoma, verdana, helvetica, sans-serif, serif;
+	font-size: 0.9em;
+	color: #5a5a5a;
 }
-div.logo {
-	background-color: #CECF9C;
-	margin:	0px;
-	padding: 0px;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-size: smaller; /* 1em; */
-	border: none;
-	border-bottom: 2px solid #000000;
-	margin-bottom: 2px;
+body > * {
+	margin-left: 20px;
 }
 body.browser {
-	background-color: #efefef;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-size: smaller; /*1em;*/
-	border-right: 1px dashed #c0c0c0;
+	font-size: 0.9em;
+	background-color: #f8f8f8;
+	color: #555555;
 }
-body.bottombar {
-	background-color: #CECF9C;
+body.browser > * {
+	margin: 0;
+}
+body.browser div.webfx-tree-row:hover {
+	background: #eeeeee;
+}
+div.logo {
 	margin:	0px;
 	padding: 0px;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-size: smaller; /*1em;*/
-	text-align: left;
+	font-size: smaller; 
+	border: none;
+	margin-bottom: 12px;
+}
+h1 {
+	font-size: 1.5em;
+	font-weight: normal;
 }
 h2 {
-	color: #666633;
-	font-size: medium; /*1.3em;*/
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-weight: bold;
-	border: 2px solid #E6E6CC;
-	background-color: #F3F3E9;
+	font-size: 1.2em;
+	font-weight: normal;
 	padding: 2px 1em;
-	margin: 0 0 1ex 0;
+	margin-top: 2em;
+	margin-bottom: 2em;
+	color: #3c424c;
+	background-color: #ffffff;
+	border-bottom: 1px solid #308ac5;
 }
 h3 {
-	color: #666633;
-	font-size: small;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-weight: bold;
+	font-size: 1.2em;
+	font-weight: normal;
+	padding: 1px 0.5em;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	color: #3c424c;
+	background-color: #ffffff;
+	border-bottom: 1px solid #9ea1a6;
 }
-table.error {background-color: #E6E6CC}
-table.error td {background-color: #E6E6CC}
-table.navbar {background-color: #E6E6CC}
-table.navbar td {
-	height:	25px;
-	color: #000000;
-	background-color: #F3F3E9;
-	text-align: center;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-size: smaller; /* 0.9em */
-	font-weight: bold;
+
+table {
+	border: 0;
+	border-collapse: collapse;
 }
-table.navbar td.active {background-color: #E6E6CC}
+td, th {
+	padding: 1px 8px;
+}
+a {
+	color: #003380;
+	text-decoration: none;
+}
+a:hover {
+	color: #cc0000;
+}
+input[type=checkbox], input[type=password], input[type=text], input[type=radio] {
+	background: #ffffff;
+	border: 1px solid #5090c1;
+}
+input[type=submit], input[type=button] {
+	background: #ffffff;
+	border: 2px solid #8aafce;
+}
+select {
+	background: #ffffff;
+	border: 1px solid #d5d5d5;
+}
+table.error {
+	margin: auto;
+	color: #d72b3f;
+	background-color: #f9f9f9;
+}
 th.data {
-	color: #000000;
-	background-color: #E6E6CC;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-size: smaller; /* 0.9em */
+	color: #3c424c;
+	background-color: #e6e6e6;
+    font-weight: normal;
+	font-size: 1.0em;
+	padding: 3px 7px;
 }
-th.data a:active, th.data a:link, th.data a:visited, th.data a:hover {
-	font-weight: bold;
+tr th.data{
+	border-right: 1px solid #dedede;
+	border-left: 1px solid #dedede;
+	border-bottom: 1px solid #dedede;
 }
-td.dat {
-	color: #ff0;
-	text-align: center;
+tr th.data:first-child {
+	border-left: 0;
+}
+tr th.data:last-child {
+	border-right: 0;
 }
 th.required {text-decoration: underline}
-td.topbar {
-	background-color: #CECF9C;
-	margin:	0px	0px;
-	padding: 0px;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-size: smaller; /*0.8em;*/
+.trail {
+	background-color: #3c424c;
+	color: #9ea1a6;
+	margin: 0;
+	padding: 0;
 	text-align: left;
 }
-ul.toplink,ul.navlink {
-	list-style: none;
-	margin:0;padding:0;
+.topbar {
+	background-color: #3c424c;
+	color: #9ea1a6;
+	margin: 0;
+	padding: 0;
+	text-align: left;
 }
-ul.navlink{margin:20px 0}
+body.browser a {
+	color: #555555;
+}
+.trail a:hover, body.browser a:hover {
+	color: #cc0000;
+}
+th.data a {
+	color: #3c424c;
+}
+th.data a:hover {
+	color: #cc0000;
+}
+.trail a {
+	color: #cfcfcf;
+}
+.topbar a {
+	color: #cfcfcf;
+}
+.topbar a:hover {
+	color: #ffffff;
+}
+.trail a:hover {
+	color: #ffffff;
+}
+.topbar .platform, .topbar .host, .topbar .username, .topbar .port {
+	color: #ffffff;
+}
+.topbar, .trail, .tab {
+	padding: 2px 1ex;
+}
+.trail td {
+	padding: 2px;
+}
+.crumb .icon {
+	margin-right: 5px;
+}
+table.tabs {
+	width: 100%;
+	border-collapse: collapse;
+	margin: 15px 0 20px 0;
+}
+.tab {
+	text-align: center;
+	vertical-align: top;
+	font-size: 1.2em;
+	border-bottom: 1px solid #eeeeee;
+	padding: 2px 10px;
+	white-space: nowrap;
+}
+.tab a {
+	color: #828d94;
+}
+.tab a:hover {
+	color: #3c424c;
+}
+.tab:hover {
+	background-color: #ffffff;
+	border-bottom: 1px solid #9ea1a6;
+}
+.tabs .active a {
+	color: #3c424c;
+	text-decoration: none;
+}
+.tabs .active {
+	background-color: #ffffff;
+	border-bottom: 1px solid #308ac5;
+}
+.tab .icon {
+	display: block;
+}
+.active a {
+	/*font-weight: bold;
+	font-size: 1.2em;
+	color: #ffffff;*/
+}
+ul.toplink, ul.navlink {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+ul.navlink{
+	margin:20px 0 20px 20px;
+}
+
 ul.toplink li, ul.navlink li {
 	display:inline;
-	border-left:1px solid #000000;
+	border-left:1px solid #b3b3b3;
 	margin:0;padding: 0 2px 0 5px;
 }
 ul.toplink li:first-child, ul.navlink li:first-child {
@@ -101,158 +215,116 @@ ul.toplink li:first-child, ul.navlink li:first-child {
 	padding-left:0;
 }
 tr.data1, tr.data2, tr.data3 {
-	color: #000000;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-size: smaller; /*0.8em;*/
+	color: #5a5a5a;
+	font-size: 0.9em;
 }
 tr.data1:hover, tr.data2:hover, tr.data3:hover {
-	background-color: #DDD;
+	background-color: #eeeeee;
+}
+tr.data1 td, tr.data2 td, tr.data3 td{
+	border-right: 1px solid #dedede;
+	border-left: 1px solid #dedede;
+}
+tr.data1:first-child td, tr.data2:first-child td, tr.data3:first-child td {
+	border-top: 0;
+}
+tr.data1 td:first-child, tr.data2 td:first-child, tr.data3 td:first-child {
+	border-left: 0;
+}
+tr.data1:last-child td, tr.data2:last-child td, tr.data3:last-child td {
+	border-bottom: 0;
+}
+tr.data1 td:last-child, tr.data2 td:last-child, tr.data3 td:last-child {
+	border-right: 0;
+}
+tr:hover td.data1, tr:hover td.data2, tr:hover td.data3 {
+	background-color: #eeeeee;
+}
+tr td.data1, tr td.data2, tr td.data3{
+	border-right: 1px solid #dedede;
+	border-left: 1px solid #dedede;
+}
+tr:first-child td.data1, tr:first-child td.data2, tr:first-child td.data3 {
+	border-top: 0;
+}
+tr td.data1:first-child, tr td.data2:first-child, tr td.data3:first-child {
+	border-left: 0;
+}
+tr:last-child td.data1, tr:last-child td.data2, tr:last-child td.data3 {
+	border-bottom: 0;
+}
+tr td.data1:last-child, tr td.data2:last-child, tr td.data3:last-child {
+	border-right: 0;
 }
 .row1, .data1 {
-	background-color: #F3F3E9;
+	background-color: #ffffff;
 	text-align: left;
 }
 .row2, .data2 {
-	background-color: #E6E6CC;
+	background-color: #f9f9f9;
 	text-align: left;
 }
-.row3, .data3 {background-color: #F3F3E9}
-td.opbutton1 {
+.row3, .data3 {background-color: #d4c8a1}
+td.opbutton1, td.opbutton2 {
 	color: #000000;
-	border-top:	1px solid #FFFFFF;
-	border-right: 1px solid	#706D41;
-	border-bottom: 1px solid #706D41;
-	border-left: 1px solid #FFFFFF;
 	cursor:	pointer;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-size: smaller; /*0.8em;*/
-	padding-left: 6px;
-	padding-right: 6px;
+	padding: 2px 6px;
 	text-align: center;
+	font-style: italic;
 }
-td.opbutton2 {
-	color: #000000;
-	border-top:	1px solid #FFFFFF;
-	border-right: 1px solid	#706D41;
-	border-bottom: 1px solid #706D41;
-	border-left: 1px solid #FFFFFF;
-	cursor:	pointer;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-size: smaller; /*0.8em;*/
-	padding-left: 6px;
-	padding-right: 6px;
-	text-align: center;
+td.opbutton1 a, td.opbutton2 a {
+	color: #306EFF;
 }
-.topbar {border: 2px solid #CECF9C}
-.topbar, .topbar * {
-	background-color: #CECF9C;
+td.opbutton1 a:hover, td.opbutton2 a:hover {
+	color: #ff0000;
 }
-.topbar .platform, .topbar .host, .topbar .username {
-	font-weight: bold;
-}
-.topbar, .trail {
-	margin-bottom: 2px;
-}
-.topbar, .trail, .tab {
-	padding: 2px 1ex;
-	font-size: smaller;
-}
-.trail, .tab {
-	border: 2px solid #E6E6CC;
-	background-color: #F3F3E9;
-}
-.trail .crumb {background-color: #F3F3E9}
-.crumb, .tab {
-	vertical-align: top;
-}
-.crumb .icon {
-	vertical-align: middle;
-	margin: 0 2px;
-}
-table.tabs {
-	width: 100%;
-	border-collapse: collapse;
-	margin-bottom: 1ex;
-}
-.tab {text-align: center}
-.tabs .active {background-color: #E6E6CC}
-.tab .icon {display: block}
-a:active {
-	color: #989973;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-weight: normal;
-	text-decoration: underline;
-}
-a,a:link {
-	color: #336699;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
+td.opbutton1:hover, td.opbutton2:hover {
 	text-decoration: none;
 }
-a:visited {
-	color: #336699;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	text-decoration: none;
-}
-a:hover {
-	color: #cc0000;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	text-decoration: none;
-}
-a.navlink:link, a.toplink:link, ul.navlink li a, ul.toplink li a {
-	color: #336699;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-weight: bold;
-	text-decoration: none;
-}
-a.navlink:visited, a.toplink:visited, ul.navlink li a:visited, ul.toplink li a:visited {
-	color: #336699;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-weight: bold;
-	text-decoration: none;
-}
-a.navlink:hover, a.toplink:hover, ul.navlink li a:hover, ul.toplink li a:hover {
-	color: #cc0000;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-weight: bold;
-	text-decoration: none;
-}
-a.navlink:active, a.toplink:active, ul.navlink li a:active, ul.toplink li a:active {
-	color: #cc0000;
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
-	font-weight: bold;
-	text-decoration: none;
-}
-.active a {font-weight: bold}
 a.help {
-	color: #E68800;
-	font-size: smaller;
+	color: #A46600;
 	vertical-align: super;
 	text-decoration: none;
+	font-size: 0.8em;
 }
-pre {font-size: 110%}
+pre {
+	font-size: 110%;
+}
 pre.data {
-	font-family: arial, tahoma, verdana, helvetica, sans-serif, serif;
 	font-size: 100%;
 }
 pre.error {
-	font-family: "Lucida Console", "Courier New", "DejaVu Sans Mono", monospace;
 	font-size: 120%;
 }
-.intro li {font-weight: bold}
-.ac_field {border:1px solid #D9D95F}
-.bottom_link {
-	background: #eee;
-	border-top: 1px dotted #999;
-	border-left: 1px dotted #999;
-	font-size: smaller;
+.intro li {
+	font-weight: normal;
 }
-
-/** FK browsing **/
-div#root > div.fk {
-	border: 1px solid #000;
+.ac_field {
+	border:1px solid #363330;
+	background: url('../../images/themes/default/openListe.png') no-repeat right;
+	padding-right: 20px;
+}
+.bottom_link {
+	background-color: #3c424c;
+	color: #cfcfcf;
+}
+.bottom_link:hover {
+	color: #ffffff;
 }
 div.fk {
     background: #fff;
-	border-left: 1px solid #000;
+	border-left: 1px dotted #000;
 	padding: 5px;
+}
+.comment {
+	color: #555555;
+}
+.keyword {
+	color: #FF8000;
+}
+.literal {
+	color: #808080;
+}
+p.message {
+	color: #306EFF;
 }
