--- a/themes/cappuccino/global.css
+++ b/themes/cappuccino/global.css
@@ -188,3 +188,111 @@ div.fk {
 	border-left: 1px dotted #000;
 	padding: 5px;
 }
+
+/** emaj specific **/
+button {
+	background: #c4ba95 url('../../images/themes/cappuccino/inputbckg.png') repeat-x top left;
+	border: 1px solid #887f5c;
+	cursor: pointer;
+}
+button:disabled,
+button[disabled]{
+	cursor: default;
+}
+table.multiactions {
+	margin-top: 0px;
+}
+th.multiactions {
+	text-align: left;
+	color: #fff;
+	background-color: #706050;
+	border: 1px dotted #887f5c;
+	font-size: 0.9em;
+	padding: 2px 10px;
+}
+tr.row1 {
+	border: 1px dotted #887f5c;
+}
+
+/*
+**
+** Tablesorter
+**
+ */
+/* tables */
+.tablesorter-default thead tr th {
+	padding-right: 18px;
+}
+.tablesorter-default .header,
+.tablesorter-default .tablesorter-header {
+	background-image: url(../../images/themes/default/bg.gif);
+	background-repeat: no-repeat;
+	background-position: center right;
+	cursor: pointer;
+}
+.tablesorter-default thead .headerSortUp,
+.tablesorter-default thead .tablesorter-headerSortUp,
+.tablesorter-default thead .tablesorter-headerAsc {
+	background-image: url(../../images/themes/default/asc.gif);
+}
+.tablesorter-default thead .headerSortDown,
+.tablesorter-default thead .tablesorter-headerSortDown,
+.tablesorter-default thead .tablesorter-headerDesc {
+	background-image: url(../../images/themes/default/desc.gif);
+}
+.tablesorter-default thead tr .tablesorter-headerDesc, table.tablesorter thead tr .tablesorter-headerAsc {
+	background-color: #706050;
+}
+.tablesorter-default thead .sorter-false {
+	background-image: none;
+	padding: 4px;
+	cursor: default;
+}
+
+/* hidden filter row */
+.tablesorter-default .tablesorter-filter-row.hideme td {
+	/*** *********************************************** ***/
+	/*** change this padding to modify the thickness     ***/
+	/*** of the closed filter row (height = padding x 2) ***/
+	padding: 2px;
+	/*** *********************************************** ***/
+	margin: 0;
+	line-height: 0;
+	cursor: pointer;
+}
+.tablesorter-default .tablesorter-filter-row.hideme .tablesorter-filter {
+	height: 1px;
+	min-height: 0;
+	border: 0;
+	padding: 0;
+	margin: 0;
+	/* don't use visibility: hidden because it disables tabbing */
+	opacity: 0;
+	filter: alpha(opacity=0);
+}
+
+/* filter widget */
+.tablesorter-default .tablesorter-filter-row td {
+	background: #706050;
+	border-bottom: #ccc 1px solid;
+	line-height: normal;
+	text-align: center; /* center the input */
+	padding: 1px 3px 1px 3px;
+	-webkit-transition: line-height 0.1s ease;
+	-moz-transition: line-height 0.1s ease;
+	-o-transition: line-height 0.1s ease;
+	transition: line-height 0.1s ease;
+}
+
+.tablesorter-default input.tablesorter-filter {
+	width: 5em;
+	font-size: 0.8em;
+	background: url("../../../../images/themes/cappuccino/inputbckg.png") repeat-x scroll left top #C4BA95;
+    border: 1px solid #887F5C;
+}
+.tablesorter-default select.tablesorter-filter {
+	font-size: 0.8em;
+}
+.tablesorter-default input.disabled {
+	display: none;
+}
