--- a/themes/ppa/global.css
+++ b/themes/ppa/global.css
@@ -256,3 +256,118 @@ div.fk {
 	border-left: 1px solid #000;
 	padding: 5px;
 }
+
+/** emaj specific **/
+button {
+	font-size: smaller;
+	color: #336699;
+	cursor: pointer;
+}
+button:disabled,
+button[disabled]{
+	color: #404040;
+	cursor: default;
+}
+
+input[type=submit], input[type=button] {
+	font-size: smaller;
+	color: #336699;
+	cursor: pointer;
+}
+table.multiactions {
+	margin-top: 0px;
+}
+th.multiactions {
+	text-align: left;
+	color: #000000;
+	background-color: #d0d0b8;
+	border: 1px dotted #887f5c;
+	font-size: smaller; /* 0.9em */
+	padding: 0px 5px;
+}
+tr.row1 {
+	border: 1px dotted #887f5c;
+}
+
+/*
+**
+** Tablesorter
+**
+ */
+/* tables */
+.tablesorter-default thead tr th {
+	padding-right: 18px;
+}
+.tablesorter-default .header,
+.tablesorter-default .tablesorter-header {
+	background-image: url(../../images/themes/default/bg.gif);
+	background-repeat: no-repeat;
+	background-position: center right;
+	cursor: pointer;
+}
+.tablesorter-default thead .headerSortUp,
+.tablesorter-default thead .tablesorter-headerSortUp,
+.tablesorter-default thead .tablesorter-headerAsc {
+	background-image: url(../../images/themes/default/asc.gif);
+}
+.tablesorter-default thead .headerSortDown,
+.tablesorter-default thead .tablesorter-headerSortDown,
+.tablesorter-default thead .tablesorter-headerDesc {
+	background-image: url(../../images/themes/default/desc.gif);
+}
+.tablesorter-default thead tr .tablesorter-headerDesc, table.tablesorter thead tr .tablesorter-headerAsc {
+	background-color: #CECF9C;
+}
+.tablesorter-default thead .sorter-false {
+	background-image: none;
+	padding: 4px;
+	cursor: default;
+}
+
+/* hidden filter row */
+.tablesorter-default .tablesorter-filter-row.hideme td {
+	/*** *********************************************** ***/
+	/*** change this padding to modify the thickness     ***/
+	/*** of the closed filter row (height = padding x 2) ***/
+	padding: 2px;
+	/*** *********************************************** ***/
+	margin: 0;
+	line-height: 0;
+	cursor: pointer;
+}
+.tablesorter-default .tablesorter-filter-row.hideme .tablesorter-filter {
+	height: 1px;
+	min-height: 0;
+	border: 0;
+	padding: 0;
+	margin: 0;
+	/* don't use visibility: hidden because it disables tabbing */
+	opacity: 0;
+	filter: alpha(opacity=0);
+}
+
+/* filter widget */
+.tablesorter-default .tablesorter-filter-row td {
+	background: #D0D0B8;
+	border-bottom: #ccc 1px solid;
+	line-height: normal;
+	text-align: center; /* center the input */
+	padding: 1px 3px 1px 3px;
+	-webkit-transition: line-height 0.1s ease;
+	-moz-transition: line-height 0.1s ease;
+	-o-transition: line-height 0.1s ease;
+	transition: line-height 0.1s ease;
+}
+
+.tablesorter-default input.tablesorter-filter {
+	width: 5em;
+	font-size: 0.8em;
+    border: 1px solid #787870;
+}
+.tablesorter-default select.tablesorter-filter {
+	font-size: 0.8em;
+    border: 1px solid #787870;
+}
+.tablesorter-default input.disabled {
+	display: none;
+}
