--- a/themes/default/global.css
+++ b/themes/default/global.css
@@ -31,9 +31,14 @@ div.logo {
 	border: none;
 	margin-bottom: 12px;
 }
+#welcome {
+	margin: 20px 20px 40px 20px;
+	text-align:center;
+}
 h1 {
 	font-size: 1.5em;
-	font-weight: normal;
+	font-weight: bold;
+	color: #308ac5;
 }
 h2 {
 	font-size: 1.2em;
@@ -50,7 +55,6 @@ h3 {
 	font-weight: bold;
 	padding: 4px 10px 4px 10px;
 	margin: 1em;
-	color: #3c424c;
 	color: #ffffff;
 	background-color: #308ac5;
 	border-radius: 7px;
