Restructure the generated pages to have proper html 5 header and footer sections.

--- a/themes/default/global.css
+++ b/themes/default/global.css
@@ -31,6 +31,10 @@ div.logo {
 	border: none;
 	margin-bottom: 12px;
 }
+header {
+	margin: 0px;
+	width: 100%;
+}
 #welcome {
 	margin: 20px 20px 40px 20px;
 	text-align:center;
