--- a/themes/default/global.css
+++ b/themes/default/global.css
@@ -46,13 +46,12 @@ h1 {
 }
 h2 {
 	font-size: 1.2em;
-	font-weight: normal;
-	padding: 2px 1em;
-	margin-top: 2em;
-	margin-bottom: 2em;
-	color: #3c424c;
-	background-color: #ffffff;
-	border-bottom: 1px solid #308ac5;
+	font-weight: bold;
+	padding: 4px 10px 4px 10px;
+	margin: 1em;
+	color: #ffffff;
+	background-color: #308ac5;
+	border-radius: 7px;
 }
 h3 {
 	font-size: 1.2em;
