--- a/css/global.css
+++ b/css/global.css
@@ -82,12 +82,12 @@ input[type=checkbox], input[type=password], input[type=text], input[type=radio] 
 	background: #ffffff;
 	border: 1px solid #5090c1;
 }
-input[type=submit], input[type=button], button {
+input[type=submit], input[type=button], input[type=reset], button {
 	background: #ffffff;
 	border: 2px solid #8aafce;
 	border-radius: 7px;
 }
-input[type=submit]:hover, input[type=button]:hover, button:hover {
+input[type=submit]:hover, input[type=button]:hover, input[type=reset]:hover, button:hover {
 	background: #eeeeee;
 }
 button:disabled {
