Fix a bug with the tables filter management. At the last download of the tablesorter jquery plugin (commit 2a05cdaba951a86cb731186dfb29afe223cdfd74), some required changes in the css had been missed. By the way, the implementation is cleaner than before, involving less js.

--- a/css/global.css
+++ b/css/global.css
@@ -507,6 +507,10 @@ div.fk_value {
 
 /* filter widget */
 
+.tablesorter .filtered {
+  display: none;
+}
+
 .tablesorter-default .tablesorter-filter-row td {
 	background: #ffffff;
 	border-bottom: #ccc 1px solid;
