--- a/css/global.css
+++ b/css/global.css
@@ -50,11 +50,15 @@ p.message {
 p.error-message {
 	color: red;
 }
-p.comment {
+.comment {
 	font-style: italic
 }
-.left{text-align: left}
-.pre {white-space: pre}
+.left {
+	text-align: left
+}
+.pre {
+	white-space: pre
+}
 
 hr {
 	color: #ffffff;
