--- a/css/global.css
+++ b/css/global.css
@@ -129,12 +129,6 @@ tr th.data{
 	border-left: 1px solid #d0d0d0;
 	border-bottom: 1px solid #d0d0d0;
 }
-tr th.data:first-child {
-	border-left: 0;
-}
-tr th.data:last-child {
-	border-right: 0;
-}
 th.required {
 	text-decoration: underline
 }
@@ -272,6 +266,9 @@ footer {
 
 /** Other content formating **/
 
+table.data {
+	border: 1px solid #e8e8e8;
+}
 th.data a {
 	color: #3c424c;
 }
@@ -357,7 +354,6 @@ td.opbutton1, td.opbutton2 {
 	color: #000000;
 	padding: 2px 6px;
 	text-align: center;
-/*	font-style: italic;*/
 }
 td.opbutton1 a, td.opbutton2 a {
 	color: #308ac5;
@@ -407,12 +403,12 @@ input[type=submit], input[type=button] {
 
 table.multiactions {
 	margin-top: 5px;
+	border: 1px solid #e8e8e8;
 }
 
 th.multiactions {
 	text-align: left;
 	background-color: #e6e6e6;
-	border: 1px solid #d8d8d8;
 	font-size: smaller; /* 0.9em */
 	padding: 0px 5px;
 }
