--- a/css/global.css
+++ b/css/global.css
@@ -326,6 +326,12 @@ ul.toplink li:first-child, ul.navlink li:first-child {
 	border: none;
 	padding-left:0;
 }
+tr th.data:first-child{
+	border-left: 0;
+}
+tr th.data:last-child {
+	border-right: 0;
+}
 tr.data1, tr.data2, tr.data3 {
 	color: #484848;
 	font-size: 0.9em;
@@ -410,12 +416,6 @@ pre.error {
 	font-weight: normal;
 }
 
-div.fk {
-    background: #fff;
-	border-left: 1px dotted #000;
-	padding: 5px;
-}
-
 button {
 	cursor: pointer;
 }
@@ -479,7 +479,12 @@ div#root {
 }
 div.fk {
     margin-left: 20px;
+	padding: 7px;
+	background-color: #308ac5;
+	border-left: 1px dotted #000;
+	border-radius: 7px;
 }
+
 div#fkcontainer {
     margin: 0;
     position: relative;
@@ -493,7 +498,11 @@ div.fk_value {
 .highlight {
 	background-color: #FFFF00;
 }
-
+a.fk_delete {
+	display: table-cell;
+	background-color: #fff;
+	padding: 2px 5px 0px 5px;
+}
 /*
 ** tablesorter JQuery plugin css description
  */
