In the schemas tab, add all actions to dynamically assign, modify, move and remove tables and sequences, with emaj version 3.2+. For the moment, the modify_tables action only process a single table. Starting from this version, the "Groups Conf" tab and the "alter_group" buttons disappear. In passing fix an issue in the crumb trail: the tables group level had no icon. This came from commit c3cd4bf9640a1fa18cd12c70c3327a2ff542d928, which deleted the E-Maj icon, forgetting its use in this crumb trail. Now use a more suitable tables group icon with an appropriate title.

--- a/css/global.css
+++ b/css/global.css
@@ -118,7 +118,14 @@ button:disabled {
 }
 select {
 	background: #ffffff;
-	border: 1px solid #d5d5d5;
+	border: 1px solid #5090c1;
+	border-radius: 5px;
+	padding: 3px 5px 3px 5px;
+	min-width: 100px;
+}
+select:disabled {
+	background: #f0f0f0;
+	border: 1px solid #d0d0d0;
 }
 
 table.error {
@@ -145,8 +152,8 @@ th.data {
 }
 
 img.info {
-	margin-top: 3px;
-	margin-left: 5px;
+	margin-left: 10px;
+	vertical-align:middle;
 }
 
 tr th.data{
