When setting a new mark on one or several tables groups, it is possible to directly specify an associated comment. The existing "Comment" button in the marks list allows to modify or delete it later if needed.

--- a/css/global.css
+++ b/css/global.css
@@ -459,6 +459,8 @@ div.form-container {
 	display: grid;
 	grid-template-columns: minmax(70px, min-content) min-content min-content;
 	grid-gap: 7px;
+	margin-top:4px;
+	margin-bottom:4px;
 }
 div.form-label {
 	white-space: nowrap;
