--- a/css/global.css
+++ b/css/global.css
@@ -42,6 +42,13 @@ h3 {
 	background-color: #308ac5;
 	border-radius: 7px;
 }
+h4 {
+	font-size: 1em;
+	font-weight: bold;
+	margin-top: 1em;
+	margin-bottom: 0.75em;
+	color: #308ac5;
+}
 
 h2 img, h3 img {
 	padding-top: 5px;
@@ -70,6 +77,10 @@ p.error-message {
 }
 .pre {
 	white-space: pre;
+}
+.rlbkEstimates {
+	font-size: 0.9em;
+	font-style: italic;
 }
 
 hr {
