--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,6 @@
 /* global.css
  *
- * main css file
+ * Main css file
  */
 
 /** general formating **/
@@ -14,7 +14,8 @@ body {
 	color: #5a5a5a;
 }
 body > * {
-	margin-left: 20px;
+	margin-left: 12px;
+	margin-right: 12px;
 }
 img {
 	border: none;
@@ -24,23 +25,16 @@ h1 {
 	font-weight: bold;
 	color: #308ac5;
 }
-h2 {
+h2, h3 {
 	font-size: 1.2em;
 	font-weight: bold;
 	padding: 4px 10px 4px 10px;
-	margin: 1em;
+	margin-top: 1.1em;
+	margin-bottom: 1em;
 	color: #ffffff;
 	background-color: #308ac5;
 	border-radius: 7px;
-}
-h3 {
-	font-size: 1.2em;
-	font-weight: bold;
-	padding: 4px 10px 4px 10px;
-	margin: 1em;
-	color: #ffffff;
-	background-color: #308ac5;
-	border-radius: 7px;
+	box-shadow: -1px 2px 5px rgba(0,0,0,.25);
 }
 h4 {
 	font-size: 1.1em;
@@ -119,6 +113,7 @@ input[type=submit], input[type=button], input[type=reset], button, .custom-file-
 	border: 2px solid #8aafce;
 	border-radius: 7px;
 	cursor: pointer;
+	box-shadow: -1px 2px 5px rgba(0,0,0,.25);
 }
 .custom-file-upload {
 	padding: 1px 6px;
@@ -159,14 +154,6 @@ table.error {
 	margin: auto;
 	color: #d72b3f;
 	background-color: #f9f9f9;
-}
-
-th.data {
-	color: #3c424c;
-	background-color: #e0e0e0;
-    font-weight: normal;
-	font-size: 1.0em;
-	padding: 3px 7px;
 }
 
 .action {
@@ -216,7 +203,7 @@ th.required {
 	border-radius: 7px;
 	opacity: .9;
 	background-color: #f2f2f4;
-	box-shadow: -2px 3px 5px rgba(0,0,0,.35);
+	box-shadow: -1px 2px 5px rgba(0,0,0,.25);
 }
 
 .comment-in-tooltip:hover span
@@ -248,6 +235,7 @@ header {
 	color: #cfcfcf;
 	margin: 0px 0px 20px 0px;
 	width: 100%;
+	box-shadow: -1px 2px 5px rgba(0,0,0,.25);
 }
 
 /** Top bar */
@@ -334,6 +322,7 @@ nav {
 .tab:hover {
 	background-color: #ffffff;
 	border-bottom: 1px solid #9ea1a6;
+	box-shadow: -1px 2px 5px rgba(0,0,0,.25);
 }
 .tab .icon {
 	display: block;
@@ -345,7 +334,6 @@ nav .active a {
 }
 nav .active {
 	background-color: #ffffff;
-	border-bottom: 1px solid #308ac5;
 }
 
 /** footer **/
@@ -371,11 +359,18 @@ footer {
 	color: #ffffff;
 }
 
-
 /** Other content formating **/
 
 table.data {
 	border: 1px solid #e8e8e8;
+	box-shadow: -1px 2px 5px rgba(0,0,0,.25);
+}
+th.data {
+	color: #3c424c;
+	background-color: #e0e0e0;
+    font-weight: normal;
+	font-size: 1.0em;
+	padding: 3px 7px;
 }
 th.data a {
 	color: #3c424c;
@@ -383,11 +378,13 @@ th.data a {
 th.data a:hover {
 	color: #cc0000;
 }
-.active a {
-	/*font-weight: bold;
+
+/*.active a {
+	font-weight: bold;
 	font-size: 1.2em;
-	color: #ffffff;*/
-}
+	color: #ffffff;
+}*/
+
 ul.toplink, ul.navlink {
 	list-style: none;
 	margin: 0;
@@ -514,14 +511,18 @@ pre.error {
 table.multiactions {
 	margin-top: 5px;
 	border: 1px solid #e8e8e8;
+	box-shadow: -1px 2px 5px rgba(0,0,0,.25);
 }
-
 th.multiactions {
 	text-align: left;
 	background-color: #e6e6e6;
 	font-size: smaller; /* 0.9em */
 	padding: 0px 5px;
 }
+table.multiactions button {
+	box-shadow: 0px 0px 0px;
+}
+
 tr.row1 {
 	border: 1px solid #d8d8d8;
 }
@@ -557,6 +558,8 @@ div.form-container-param {
 	display: grid;
 	grid-template-columns: minmax(70px, min-content) min-content min-content min-content;
 	grid-gap: 7px;
+	padding: 10px;
+	box-shadow: -1px 2px 5px rgba(0,0,0,.25);
 }
 div.form-param-label {
 	white-space: nowrap;
@@ -604,6 +607,9 @@ div.form-param-button {
 #welcome {
 	margin: 20px 20px 40px 20px;
 	text-align:center;
+}
+#welcome img {
+	width: 400px;
 }
 
 /** FK browsing **/
