--- a/css/global.css
+++ b/css/global.css
@@ -115,6 +115,18 @@ input[type=submit], input[type=button], input[type=reset], button, .custom-file-
 	cursor: pointer;
 	box-shadow: -1px 2px 5px rgba(0,0,0,.25);
 }
+
+.actionslist {
+	margin-top: 15px;
+	margin-bottom: 10px
+}
+.actionslist form {
+	display: inline;
+}
+.actionslist input {
+	margin-left: 15px;
+}
+
 .custom-file-upload {
 	padding: 1px 6px;
 }
